--- a/HelloDevApp/app/src/main/res/values/strings.xml
+++ b/HelloDevApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">HelloDevApp</string>
+    <string name="app_name">Goyal Tyres &amp; Rubbers</string>
 </resources>
